# me433-sprad

./: README.md
HW12/: CMakeLists.txt
HW12/servo/: CMakeLists.txt  servo.c
HW14/: hw14.ipynb  plots_are_in_the_ipynb_^  python_csv.py  python_fft.py  python_fir.py  python_iir.py  python_maf.py  python_plot.py
HW14/.ipynb_checkpoints/: hw14-checkpoint.ipynb
HW2/: CMakeLists.txt  blinky.c
HW2/blink/: CMakeLists.txt  blink.c
HW3/: CMakeLists.txt
HW3/print/: CMakeLists.txt  print.c
HW4/: CMakeLists.txt  hw4circuit.HEIC  hw4scope.HEIC  hw4workspace.HEIC
HW4/SPI/: CMakeLists.txt  SPI.c
HW5/: CMakeLists.txt
HW5/I2CIO/: CMakeLists.txt  I2CIO.c
HW6/: CMakeLists.txt
HW6/OLED/: CMakeLists.txt  OLED.c
HW7/: CMakeLists.txt
HW7/UART/: CMakeLists.txt  UART.c  ssd1306.c
HW9/: CMakeLists.txt  hw9serpy.HEIC
HW9/zp/: CMakeLists.txt  zp.c
HWs/HW2/: CMakeLists.txt
